Added another FAQ

--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -60,6 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Q.** If my solution produces the correct output on all the tests do I get full marks?    \n",
+    "**A.** Not necessarily. The tests are there to help you check your implementation and you're free to add more if you wish. But your solution will be graded based on whether the implementation you wrote is correct and solves the problem (this is why it's useful to add the explanation of how your solution works)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Q.** If I get over 100pt are the bonus points added to the next homework assignment?  \n",
     "**A.** No. Anything above 100 is truncated at 100."
    ]
