Fixed strange display

--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "**Q.** If my solution produces the correct output on all the tests do I get full marks?    \n",
-    "**A.** Not necessarily. The tests are there to help you check your implementation and you're free to add more if you wish. But your solution will be graded based on whether the implementation you wrote is correct and solves the problem (this is why it's useful to add the explanation of how your solution works)."
+    "**A.** Not necessarily. The tests are there to help you check your implementation and you're free to add more if you wish or ignore them altogether. Your solution will be graded based on whether the implementation you wrote is correct and solves the problem (this is why it's useful to add the explanation of how your solution works)."
    ]
   },
   {
@@ -243,7 +243,7 @@
    "source": [
     "Another interesting problem that we can solve efficiently using interference, but for which classical algorithms require exponentially-many queries to solve is known as _Forrelation_ (you can read more about it [here](https://www.scottaaronson.com/papers/for.pdf)). In this problem, you're given oracle access to two functions\n",
     "\n",
-    "$$f: \\{0, 1\\}^n \\to \\{-1, +1\\}$$\n",
+    "$$f: \\{0, 1\\}^n \\to \\{-1, +1\\}$$  \n",
     "\n",
     "$$g: \\{0, 1\\}^n \\to \\{-1, +1\\}$$\n",
     "\n",
