Really fixed it this time

--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -497,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See slides 45 to 50 from [here](http://swarm.cs.pub.ro/~agheorghiu/QW3/Day%203%20-%20alg%20(complete).pdf) for a brief explanation of how to generalize Simon's algorithm to period-finding."
+    "See slides 45 to 50 from [here](http://swarm.cs.pub.ro/~agheorghiu/QW3/Day%203%20-%20alg%20%28complete%29.pdf) for a brief explanation of how to generalize Simon's algorithm to period-finding."
    ]
   },
   {
