Output type for transformations is float

--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interf2k(funList: List[Callable[[Any], int]], transfList: List[Callable[[Any, Any], int]], domain: List[Any]) -> Any:\n",
+    "def interf2k(funList: List[Callable[[Any], int]], transfList: List[Callable[[Any, Any], float]], domain: List[Any]) -> Any:\n",
     "    # your code here\n",
     "    return []"
    ]
