Added clarifications to Task 1 and allocated more points for it

--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each task has a certain number of points, for a total of **130pt**. You only need **100pt** to get full marks on this assignment. "
+    "Each task has a certain number of points, for a total of **135pt**. You only need **100pt** to get full marks on this assignment. "
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## (20pt) Task 1: interf1 from interf2"
+    "## (25pt) Task 1: interf1 from interf2"
    ]
   },
   {
@@ -148,7 +148,59 @@
    "source": [
     "We can see that `interf2` is a more general form of interference and the purpose of this task is to show that fact.\n",
     "\n",
-    "Your task is to implement `interf1` using `interf2`. Your implementation should have a constant number of calls to `interf2` and should behave like `interf1` with, say, $99\\%$ probability. In other words, your implementation should produce the same results as `interf1` $99\\%$ of the time. In addition, your implementation has to be efficient: you are only allowed operations that can be performed in time polynomial in $log(|D|)$. This means that you cannot compute things like $\\sum_{x \\in D} f(x)$. You need to make use of `interf2` to do any computationally expensive operation. Do this by filling out the code block below."
+    "Your task is to implement `interf1` using `interf2`. Your implementation should have a number of calls to `interf2` that is at most some polynomial in $log(|D|)$ and should behave like `interf1` with, say, $99\\%$ probability. In other words, your implementation should produce the same results as `interf1` $99\\%$ of the time.  Allowed operations include:\n",
+    "\n",
+    "1. Computing the size of $D$. So things like `len(domain)` are ok (in practice this operation takes time linear in $|D|$, but if you imagine that $D$ is presented as an efficient function that you can query for elements in $D$, then you should know the range that you can query).\n",
+    "\n",
+    "2. Querying $D$. So things like `domain[i]` are ok (of course the number of such queries must be at most $poly(log(|D|))$).\n",
+    "\n",
+    "3. Defining a new domain as a function of $D$ (e.g. `newDomain = list(zip(domain, domain))` or `newDomain = list(map(myFunction, domain))`, as long as `myFunction` is an efficient function).\n",
+    "\n",
+    "4. When defining the $T$ used by `interf2`, you are allowed to call $f$ inside $T$ (as long as the number of calls to $f$ that $T$ makes is at most $poly(log(|D|))$).\n",
+    "\n",
+    "What's not allowed is computing things like $\\sum_{x \\in D} f(x)$ and generally aggregating results about more than $poly(log(|D|))$ elements in $D$. You need to make use of `interf2` to do any computationally expensive operation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll consider two cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (20pt) Binary strings case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make things easier (and similar to the lectures), for this case you can assume the domain, $D$, is the set of all $n$-bit (or `numBits`-bit) binary strings, $\\{0, 1\\}^n$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (5pt) Generic case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this case you should assume that `domain` is just some generic set of elements. Of course, a solution to this case subsumes the previous case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complete the code block below (and specify if your solution is generic or works only for the binary strings case)."
    ]
   },
   {
