Fixed typo and added some clarifying remarks to task 2

--- a/HW1/Homework 1.ipynb
+++ b/HW1/Homework 1.ipynb
@@ -241,9 +241,15 @@
    "source": [
     "More precisely, for a function $f : D \\to \\{-1, +1\\}$, we would like to sample a string $y \\in D$, according to the following probability distribution\n",
     "\n",
-    "$$Pr(y) = \\left| \\sum_{x_1, x_2, ... x_k, y \\in D} f(x_1) T_{1}(x_1, x_2) f(x_2) T_{2}(x_2, x_3) ... T_{k-1}(x_{k-1}, x_k) f(x_k) T_{k} (x_k, y) \\right|$$\n",
+    "$$Pr(y) = \\left| \\sum_{x_1, x_2, ... x_k \\in D} f(x_1) T_{1}(x_1, x_2) f(x_2) T_{2}(x_2, x_3) ... T_{k-1}(x_{k-1}, x_k) f(x_k) T_{k} (x_k, y) \\right|$$\n",
     "\n",
-    "suitably normalized. Here, $x_i \\in \\{0, 1\\}^n$ and $k$ denotes the number of coherent queries being performed. Note how the queries are combined together using the transformations $T_i$. We can now see that that `interf2` is the $k=1$ query version of this."
+    "suitably normalized. Here, $x_i \\in \\{0, 1\\}^n$ and $k$ denotes the number of coherent queries being performed.\n",
+    "Also, the notation\n",
+    "\n",
+    "$$ \\sum_{x_1, x_2, ... x_k \\in D} \\equiv \\sum_{x_1 \\in D} \\sum_{x_2 \\in D} ... \\sum_{x_k \\in D} $$\n",
+    "\n",
+    "Is just a short-hand for repeated summation. Each $x_i$ is ranging over the entire set $D$ (independently of the other $x_i$'s).\n",
+    "Note how the queries are combined together using the transformations $T_i$. We can now see that that `interf2` is the $k=1$ query version of this."
    ]
   },
   {
@@ -252,7 +258,7 @@
    "source": [
     "To be as general as possible, we can also make each query be performed to a potentially different oracle function. In other words, for oracle functions $f_1, f_2, ... f_k : D \\to \\{-1, +1\\}$, we would like to sample a string $y \\in D$, according to the suitably normalized distribution\n",
     "\n",
-    "$$Pr(y) = \\left| \\sum_{x_1, x_2, ... x_k, y \\in D} f_1(x_1) T_{1}(x_1, x_2) f_2(x_2) T_{2}(x_2, x_3) ... T_{k-1}(x_{k-1}, x_k) f_k(x_k) T_{k} (x_k, y) \\right|$$\n",
+    "$$Pr(y) = \\left| \\sum_{x_1, x_2, ... x_k \\in D} f_1(x_1) T_{1}(x_1, x_2) f_2(x_2) T_{2}(x_2, x_3) ... T_{k-1}(x_{k-1}, x_k) f_k(x_k) T_{k} (x_k, y) \\right|$$\n",
     "\n",
     "Note that if we were to take $f_i = f$, we recover the version from above."
    ]
