Corrected error in Task 1B, HW2

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -134,7 +134,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -273,12 +272,12 @@
     "If we denote the probability that the test succeeds in this case as $p_0$, convince yourself that $p_0$ is given by\n",
     "\n",
     "$$\n",
-    "p_0 =  \\frac{1}{2} + \\frac{1}{2} \\cos(\\theta).\n",
+    "p_0 =  \\frac{1}{2} + \\frac{1}{2} \\cos^2(\\theta/2).\n",
     "$$\n",
     "\n",
-    "You can therefore estimate $\\cos(\\theta)$ to very high precision by simply running the circuit a couple of times and keeping track of the number of times you see the outcome $0$. If you run the circuit $N$ times, then you can approximate $p_0$ as the fraction $p_0 \\approx \\frac{\\#(\\text{outcomes} = 0)}{N}$, and hence $\\left| \\langle \\phi|\\psi \\rangle \\right|^2 = \\cos (\\theta) \\approx 2 p_0 -1$. You can use the following rule of thumb: in order to get an additive $\\epsilon$ approximation, i.e. within $\\cos(\\theta) \\pm \\epsilon$, you should have roughly $N = O \\left( \\frac{1}{\\epsilon^2} \\right)$ many repetitions. Here, a value of $\\epsilon = 0.05$ should be sufficient.\n",
+    "You can therefore estimate $\\cos(\\theta)$ to very high precision by simply running the circuit a couple of times and keeping track of the number of times you see the outcome $0$. If you run the circuit $N$ times, then you can approximate $p_0$ as the fraction $p_0 \\approx \\frac{\\#(\\text{outcomes} = 0)}{N}$, and hence $\\left| \\langle \\phi|\\psi \\rangle \\right|^2 = \\cos^2 (\\theta/2) \\approx 2 \\frac{\\#(\\text{outcomes} = 0)}{N} -1$. Using the fact that $cos^2(\\theta/2) = \\frac{1}{2}(1 + cos(\\theta))$, we have that $cos(\\theta) \\approx 4 \\frac{\\#(\\text{outcomes} = 0)}{N} -3$. You can use the following rule of thumb: in order to get an additive $\\epsilon$ approximation, i.e. within $\\cos(\\theta) \\pm \\epsilon$, you should have roughly $N = O \\left( \\frac{1}{\\epsilon^2} \\right)$ many repetitions. Here, a value of $\\epsilon = 0.01$ should be sufficient.\n",
     "\n",
-    "Using a simple loop, run the circuit for every $\\theta \\in [0,2 \\pi]$ in increments of $0.1$ and compute the value of $2 p_0 -1$ in each step. Afterwards, plot the values of $2 p_0 -1$ against the values of $\\theta$. You should be able to recover the state overlap $|\\langle \\phi|\\psi\\rangle |^2 = cos(\\theta)$ as a function of $\\theta$. "
+    "Using a simple loop, run the circuit for every $\\theta \\in [0,2 \\pi]$ in increments of $0.1$ and compute the value of $4 \\frac{\\#(\\text{outcomes} = 0)}{N} -3$ in each step. Afterwards, plot the values against the values of $\\theta$."
    ]
   },
   {
