Fixed typo in HW2

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +161,13 @@
        "simpleBV"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "    operation simpleBV(qs : Qubit): Unit {\n",
+    "    operation simpleBV(qs : Qubit[]): Unit {\n",
     "        // add your code in here\n",
     "    }"
    ]
