Made correction to task 5 in HW2

--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -643,17 +643,25 @@
     "\n",
     "We start with two registers of $3$ qubits each, denoted $|x \\rangle$ and $|y \\rangle$. To make things easier, we will assume each die takes values between $0$ and $7$ (rather than the traditional $1$ to $6$). Each die will start off in the $|000\\rangle$ state. Next, perform these operations:\n",
     "\n",
-    "1. Place each die in an equal superposition of all $8$ possible values. \n",
+    "1. Place each die in an equal superposition of all $8$ possible values by initializing each of the two registers as $|000 \\rangle$ and Hadamarding them.\n",
     "\n",
     "2. Perform the operation that we'll refer to as ``phaseOnAscend``. The effect of this operation is to add a phase of $(-1)$ to the state if $x < y$ (the registers are in strictly ascending order) and otherwise it does nothing. In other words,\n",
     "\n",
     "$$phaseOnAscend \\; |x \\rangle |y \\rangle = (-1)^{ [x < y] } |x \\rangle |y \\rangle$$\n",
     "\n",
+    "To do this, you might find [this](https://docs.microsoft.com/en-us/qsharp/api/qsharp/microsoft.quantum.arithmetic.compareusingripplecarry?view=qsharp-preview) operation useful.\n",
+    "\n",
     "3. Add the values of the two register into a third register $|z \\rangle$, of $4$ qubits (initialized as $|0000\\rangle$). For this step, you can use either the quantum adder from Task 4 or one of the adders already implemented in Q# (see the [documentation](https://docs.microsoft.com/en-us/qsharp/api/qsharp/microsoft.quantum.arithmetic)).\n",
     "\n",
-    "4. Measure the $|z \\rangle$ register in the computational basis.\n",
+    "4. Hadamard the $|x \\rangle$ and $|y \\rangle$ registers to recombine the amplitudes (this will cause cancellation resulting from the phases added by ``phaseOnAscend``).\n",
     "\n",
-    "Repeat this procedure a number of times and create a histogram of the $z$ outcomes."
+    "4. Measure all registers in the computational basis. We say that the result in the $|z \\rangle$ register is _accepted_ if and only if the top registers are both in the $|000 \\rangle$ state. Otherwise, we ignore the $z$ outcome.\n",
+    "\n",
+    "Schematically, the circuit for this procedure should look like this:\n",
+    "\n",
+    "![image.png](img/qdice.png)\n",
+    "\n",
+    "Repeat this procedure a number of times and create a histogram of the _accepted_ $z$ outcomes."
    ]
   },
   {
@@ -661,6 +669,13 @@
    "metadata": {},
    "source": [
     "There is no code block for this task. You are free to implement this however you find it most convenient. You can either add your solution into this Jupyter notebook, or add it as a separate file in the archive. Either way, you should also have the histogram plot from the statistics of measuring $|z \\rangle$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If your implementation takes too long with these $10$ qubits (as well as any additional ancilla you may be using), you can also have each die be supported on just $2$ qubits and the $|z \\rangle$ register be on $3$ qubits, for a total of $7$ qubits."
    ]
   }
  ],
