--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -660,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (10pt) Task 4B: Implementing the paramterized unitary\n",
+    "#### (10pt) Task 4B: Implementing the parametrized unitary\n",
     "\n",
     "For the parametrized unitary, you are free to implement it however you like, and you're encouraged to experiment with different choices. As explained in [this paper](https://arxiv.org/abs/1804.00633), the circuit has to be strongly entangling for the classifier to work. This means that there need to be sufficient two qubit gates in the circuit for correlations to spread between _all_ qubits.\n",
     "\n",
