Fixed typo in HW4

--- a/HW4/Homework 4.ipynb
+++ b/HW4/Homework 4.ipynb
@@ -307,12 +307,12 @@
     "\n",
     "$$ \\sum_{x_1} \\sum_{x_2} |x_1 \\rangle |x_2 \\rangle |f(x_1, x_2) \\rangle $$\n",
     "\n",
-    "then apply the QFT to the $|x_1 \\rangle |x_2 \\rangle$ registers and measure those registers in the computational basis. With high probability you should obtain $(s l_1 / 2^n, l_2 / 2^n)$, for some integers $l_1$, $l_2$, and where $n$ is the number of qubits of _one_ of the $x$ registers. Do this by completing the code block:"
+    "then apply the QFT to the $|x_1 \\rangle |x_2 \\rangle$ registers and measure those registers in the computational basis. With high probability you should obtain $(s l / 2^n, l / 2^n)$, for some integer $l$, and where $n$ is the number of qubits of _one_ of the $x$ registers. Do this by completing the code block:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -325,13 +325,13 @@
        "discreteLogOrderFinder"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "// returns the tuple (s*l1/2^n, l2/2^n); here n denotes the number of qubits for each of the x registers\n",
+    "// returns the tuple (s*l/2^n, l/2^n); here n denotes the number of qubits for each of the x registers\n",
     "operation discreteLogOrderFinder(a: Int, b: Int, N: Int, n: Int) : (Int, Int) {\n",
     "\n",
     "    // your code here\n",
@@ -745,7 +745,7 @@
    "file_extension": ".qs",
    "mimetype": "text/x-qsharp",
    "name": "qsharp",
-   "version": "0.10"
+   "version": "0.4"
   }
  },
  "nbformat": 4,
